complete user redux with preview image

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -59,6 +59,7 @@
     "address": "Address",
     "role-id": "Role ID",
     "image": "Image",
-    "save": "Save"
+    "save": "Save",
+    "preview-image-upload": "Upload"
   }
 }
