--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -59,6 +59,7 @@
     "address": "Địa chỉ",
     "role-id": "Vai trò",
     "image": "Ảnh đại diện",
-    "save": "Lưu người dùng"
+    "save": "Lưu người dùng",
+    "preview-image-upload": "Tải ảnh"
   }
 }
