handle save image to server, edit user

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -60,6 +60,7 @@
     "role-id": "Role ID",
     "image": "Image",
     "save": "Save",
+    "edit": "Edit user",
     "preview-image-upload": "Upload"
   }
 }
