--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -60,6 +60,7 @@
     "role-id": "Vai trò",
     "image": "Ảnh đại diện",
     "save": "Lưu người dùng",
+    "edit": "Sửa người dùng",
     "preview-image-upload": "Tải ảnh"
   }
 }
