--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -53,6 +53,10 @@
       "manage-specialty": "Quản lý chuyên khoa",
       "handbook": "Cẩm nang",
       "manage-handbook": "Quản lý cẩm nang"
+    },
+    "doctor": {
+      "manage-user": "Người dùng",
+      "manage-schedule": "Quản lý lịch khám"
     }
   },
   "manage-user": {
