--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -75,11 +75,32 @@
     "edit": "Sửa người dùng",
     "preview-image-upload": "Tải ảnh"
   },
+  "manage-doctor": {
+    "create": "Tạo thông tin bác sĩ",
+    "select": "Chọn bác sĩ",
+    "info": "Miêu tả thông tin bác sĩ",
+    "price": "Giá bác sĩ",
+    "payment": "Phương thức thanh toán",
+    "province": "Tỉnh thành",
+    "clinic_name": "Tên bác sĩ",
+    "address": "Địa chỉ",
+    "note": "Ghi chú"
+  },
   "doctor-schedule": {
     "title": "Quản lý lịch khám bệnh của bác sĩ",
     "choose-doctor": "Chọn bác sĩ",
     "choose-date": "Chọn ngày",
     "choose-time": "Chọn thời gian",
     "register": "Đặt lịch"
+  },
+  "patient": {
+    "detail-doctor": {
+      "schedule": "Lịch khám",
+      "no-schedule": "Chưa có lịch khám bệnh trong ngày này",
+      "address": "Địa chỉ khám",
+      "price": "Giá khám",
+      "insurance": "Loại bảo hiểm áp dụng",
+      "see-in-detail": "Xem chi tiết"
+    }
   }
 }
