--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -105,6 +105,20 @@
       "priority": "Get priority medical care before visiting through BookingCare. The cost of medical examination for foreigners is",
       "type_of_payment": "The patient can pay the cost in the form of",
       "hide_price_detail": "Hide price detail"
+    },
+    "booking-modal": {
+      "booking": "Booking schedule",
+      "price": "Price",
+      "info": "Information",
+      "name": "Full name",
+      "address": "Address",
+      "phone": "Phone number",
+      "email": "Email address",
+      "reasons": "Reason",
+      "gender": "Gender",
+      "birthday": "Birthday",
+      "confirm": "Confirm",
+      "cancel": "Cancel"
     }
   }
 }
